--- a/public/timeclock.html
+++ b/public/timeclock.html
@@ -21,6 +21,8 @@
     <button class="btn btn-outline-secondary mt-2" onclick="logout()">Logout</button>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
 <script src="js/timeclock.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
