--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>FNE Time Clock - Admin Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Session Dashboard</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 30px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 15px; }
+    th, td { border: 1px solid #ccc; padding: 6px 12px; text-align: left; }
+    th { background: #f0f0f0; }
+    .filters { margin-bottom: 20px; }
+    button { padding: 2px 8px; }
+    .tab { padding: 8px 16px; border: 1px solid #ccc; cursor: pointer; background: #f8f8f8; }
+    .tab.selected { background: #e0e0ff; font-weight: bold; }
+  </style>
 </head>
-<body class="bg-light">
-<div class="container mt-5">
-  <h2 class="text-center">Admin Dashboard</h2>
-  <div id="admin-login-section" class="card mx-auto mt-5" style="max-width:400px;">
-    <div class="card-body">
-      <h5 class="card-title">Admin Login</h5>
-      <input class="form-control mb-2" id="adminUser" placeholder="Username">
-      <input class="form-control mb-2" type="password" id="adminPass" placeholder="Password">
-      <button class="btn btn-primary w-100" onclick="adminLogin()">Login</button>
-    </div>
+<body>
+  <h1>Session Dashboard</h1>
+  <div class="filters">
+    Worker:
+    <select id="filterWorker"></select>
+    Project:
+    <select id="filterProject"></select>
+    <span style="margin-left:20px;">
+      <span class="tab selected" id="tabOpen">Open Sessions</span>
+      <span class="tab" id="tabClosed">Closed Sessions</span>
+      <span class="tab" id="tabAll">All Sessions</span>
+    </span>
   </div>
-  <div id="dashboard-section" style="display:none;">
-    <div class="d-flex mb-2 justify-content-end">
-      <button class="btn btn-secondary" onclick="showClockedIn()">Clocked In</button>
-      <button class="btn btn-outline-secondary ms-2" onclick="showClockedOut()">Clocked Out</button>
-      <button class="btn btn-link ms-2" onclick="logout()">Logout</button>
-    </div>
-    <div id="admin-table"></div>
-  </div>
-</div>
-<script src="js/dashboard.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <table id="sessionTable">
+    <thead>
+      <tr>
+        <th>Worker</th>
+        <th>Project</th>
+        <th>Clock-in</th>
+        <th>Duration</th>
+        <th>Note</th>
+        <th>Pay Rate</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <script src="dashboard.js"></script>
 </body>
 </html>
