--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -41,6 +41,6 @@
     </thead>
     <tbody></tbody>
   </table>
-  <script src="dashboard.js"></script>
+  <script src="/js/dashboard.js"></script>
 </body>
 </html>
