logging to fix undefined

--- a/public/payroll2.html
+++ b/public/payroll2.html
@@ -82,6 +82,7 @@
 <script src="js/payroll.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+console.log(data[0]);
 // Patch payrollTable rendering to match the screenshot grouping by date
 function renderPayrollTable(data) {
   // Data: array of objects with fields: date, project, worker, in, out, hours, ot, rate, amount
