fine tune report 2

--- a/public/payroll2.html
+++ b/public/payroll2.html
@@ -85,7 +85,20 @@
   
   <div class="table-responsive">
     <table class="table table-bordered table-sm table-report" id="payroll-table-container">
-
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Project</th>
+          <th>Worker</th>
+          <th>In</th>
+          <th>Out</th>
+          <th>Hours</th>
+          <th>OT</th>
+          <th>Rate</th>
+          <th>Amount</th>
+          <th><input type="checkbox" style="visibility:hidden"></th>
+        </tr>
+      </thead>
       <tbody id="payroll-table">
         <!-- Entries will be dynamically generated -->
       </tbody>
