--- a/public/db.html
+++ b/public/db.html
@@ -2,42 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Session Dashboard</title>
+  <title>My Time Clock Sessions</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; }
     table { border-collapse: collapse; width: 100%; margin-top: 15px; }
     th, td { border: 1px solid #ccc; padding: 6px 12px; text-align: left; }
     th { background: #f0f0f0; }
     .filters { margin-bottom: 20px; }
-    button { padding: 2px 8px; }
     .tab { padding: 8px 16px; border: 1px solid #ccc; cursor: pointer; background: #f8f8f8; }
     .tab.selected { background: #e0e0ff; font-weight: bold; }
-    .overtime { background: #ffe0e0 !important; }
     .editable:focus { background: #fffbe6; outline: 1px solid #dab; }
   </style>
 </head>
 <body>
-  <h1>Session Dashboard</h1>
+  <h2>My Sessions</h2>
+  <div id="greeting"></div>
   <div class="filters">
-    Worker:
-    <select id="filterWorker"></select>
     Project:
     <select id="filterProject"></select>
     Date:
     <input type="date" id="filterStartDate"> to
     <input type="date" id="filterEndDate">
     <span style="margin-left:20px;">
-      <span class="tab selected" id="tabOpen">Open Sessions</span>
-      <span class="tab" id="tabClosed">Closed Sessions</span>
-      <span class="tab" id="tabAll">All Sessions</span>
+      <span class="tab selected" id="tabOpen">Open</span>
+      <span class="tab" id="tabClosed">Closed</span>
+      <span class="tab" id="tabAll">All</span>
     </span>
-    <label style="margin-left:20px;"><input type="checkbox" id="highlightOvertime"> Highlight Overtime Days</label>
     <button id="exportCSV" style="float:right;">Export CSV</button>
   </div>
   <table id="sessionTable">
     <thead>
       <tr>
-        <th>Worker</th>
         <th>Project</th>
         <th>Clock-in (local)</th>
         <th>Clock-out (local)</th>
@@ -46,11 +42,11 @@
         <th>Note In</th>
         <th>Note Out</th>
         <th>Pay Rate</th>
-        <th>Action</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
-  <script src="/js/dashboard.js"></script>
+  <button class="btn btn-secondary mt-3" onclick="window.location='timeclock.html'">Back to Clock</button>
+  <script src="/js/worker-dashboard.js"></script>
 </body>
 </html>
