--- a/public/project_admin.html
+++ b/public/project_admin.html
@@ -5,6 +5,122 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+<!-- Collapsible Admin Menu (Reusable Include) -->
+<button id="menu-toggle" aria-label="Menu">&#9776;</button>
+<div id="menu" aria-label="Main menu">
+  <ul>
+    <li><a href="dashboard.html">Dashboard</a></li>
+    <li><a href="payrate_admin.html">Pay Rates</a></li>
+    <li><a href="payroll2.html">Payroll</a></li>
+    <li><a href="project_admin.html">Projects</a></li>
+    <li><a href="worker_admin.html">Workers</a></li>
+    <li><a href="#" id="adminLogoutBtn">Logout</a></li>
+  </ul>
+</div>
+<div class="menu-overlay" id="menu-overlay"></div>
+<style>
+  #menu-toggle {
+    position: fixed;
+    top: 18px;
+    left: 18px;
+    z-index: 1051;
+    background: #1976d2;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 9px 14px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background 0.2s;
+  }
+  #menu-toggle:hover {
+    background: #1256a7;
+  }
+  #menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 220px;
+    height: 100%;
+    background: #222;
+    color: #fff;
+    z-index: 1050;
+    padding-top: 60px;
+    box-shadow: 2px 0 12px rgba(0,0,0,0.18);
+  }
+  #menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  #menu li {
+    margin: 0;
+    padding: 0;
+  }
+  #menu a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 26px;
+    font-size: 1.05rem;
+    border-bottom: 1px solid #333;
+    transition: background 0.14s;
+  }
+  #menu a.active, #menu a:hover {
+    background: #1976d2;
+  }
+  @media (max-width: 700px) {
+    #menu {
+      width: 80vw;
+    }
+  }
+  .menu-overlay {
+    display: none;
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.18);
+    z-index: 1049;
+  }
+</style>
+<script>
+(function() {
+  const menuToggle = document.getElementById('menu-toggle');
+  const menu = document.getElementById('menu');
+  const overlay = document.getElementById('menu-overlay');
+  function openMenu() {
+    menu.style.display = 'block';
+    overlay.style.display = 'block';
+    document.body.style.overflow = 'hidden';
+  }
+  function closeMenu() {
+    menu.style.display = 'none';
+    overlay.style.display = 'none';
+    document.body.style.overflow = '';
+  }
+  menuToggle.onclick = function() {
+    if (menu.style.display === 'block') closeMenu();
+    else openMenu();
+  };
+  overlay.onclick = closeMenu;
+  document.addEventListener('keydown', e => {
+    if (e.key === 'Escape') closeMenu();
+  });
+  // Highlight active menu item
+  (function highlightMenu() {
+    const currentPage = location.pathname.split('/').pop();
+    document.querySelectorAll('#menu a').forEach(a => {
+      if (a.getAttribute('href') === currentPage) a.classList.add('active');
+    });
+  })();
+  // Logout button (optional, adjust endpoint as needed)
+  document.getElementById('adminLogoutBtn').onclick = function(e) {
+    e.preventDefault();
+    fetch('/api/admin/logout', { method: 'POST', credentials: 'same-origin' })
+      .then(() => window.location = '/admin_login.html');
+  };
+})();
+</script>
 <div class="container mt-5">
   <h2 class="text-center">Project Admin</h2>
   <div id="project-admin-section"></div>
